# speech-translator-rs

./: Cargo.toml  LICENSE  README.md
src/: audio_recorder.rs  chat_completion.rs  main.rs  speech_to_text.rs
