[package]
name = "speech-translator-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15"
hound = "3.4"
reqwest = { version = "0.12.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42.0", features = ["full"] }
anyhow = "1.0.95"
dasp = "0.11"
dotenv = "0.15"